--- a/TesteDrConsulta/Base.lproj/LaunchScreen.storyboard
+++ b/TesteDrConsulta/Base.lproj/LaunchScreen.storyboard
@@ -6,9 +6,15 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Light</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -18,23 +24,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="drconsulta_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="yVo-Y8-WSw">
-                                <rect key="frame" x="40" y="115" width="240" height="170"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="drconsulta_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="yVo-Y8-WSw">
+                                <rect key="frame" x="16" y="115" width="288" height="170"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="yVo-Y8-WSw" secondAttribute="height" multiplier="144:85" id="yUP-1P-tl6"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Teste" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mFJ-Rk-Ao0">
-                                <rect key="frame" x="40" y="20" width="240" height="100"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="43"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Teste" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mFJ-Rk-Ao0">
+                                <rect key="frame" x="16" y="20" width="288" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="mFJ-Rk-Ao0" secondAttribute="height" multiplier="72:25" id="m6z-2o-xdg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="43"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="twitch_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Awo-3K-Hbg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="twitch_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Awo-3K-Hbg">
                                 <rect key="frame" x="16" y="293" width="288" height="150"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Awo-3K-Hbg" secondAttribute="height" multiplier="48:25" id="4Ct-rh-Bmk"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Awo-3K-Hbg" firstAttribute="top" secondItem="yVo-Y8-WSw" secondAttribute="bottom" constant="8" id="7m8-Kr-NYw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Awo-3K-Hbg" secondAttribute="bottom" constant="125" id="GVf-Jx-4CI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mFJ-Rk-Ao0" secondAttribute="trailing" constant="16" id="Ioq-dg-f8c"/>
+                            <constraint firstItem="Awo-3K-Hbg" firstAttribute="top" secondItem="yVo-Y8-WSw" secondAttribute="bottom" constant="8" id="Kqb-EK-8iy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Awo-3K-Hbg" secondAttribute="trailing" constant="16" id="L8g-Jt-4tn"/>
+                            <constraint firstItem="Awo-3K-Hbg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="RyC-31-J1i"/>
+                            <constraint firstItem="mFJ-Rk-Ao0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Tyd-2C-K2p"/>
+                            <constraint firstItem="mFJ-Rk-Ao0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Vmk-b3-7uN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yVo-Y8-WSw" secondAttribute="trailing" constant="16" id="XSo-j8-LAf"/>
+                            <constraint firstItem="yVo-Y8-WSw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="pbn-AD-hjm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
