--- a/TesteDrConsulta/Cell/StreamTableCell.xib
+++ b/TesteDrConsulta/Cell/StreamTableCell.xib
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,33 +21,54 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sFZ-Sc-FYg">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sFZ-Sc-FYg">
                         <rect key="frame" x="16" y="11" width="78" height="78"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="sFZ-Sc-FYg" secondAttribute="height" multiplier="1:1" id="qTw-UR-nKa"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dPU-y0-RzV">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dPU-y0-RzV">
                         <rect key="frame" x="102" y="11" width="202" height="40"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="dPU-y0-RzV" secondAttribute="height" multiplier="101:20" id="VWq-5b-shg"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FhQ-mt-l1n">
-                        <rect key="frame" x="224" y="59" width="80" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Espectadores" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tc4-2y-9S0">
+                        <rect key="frame" x="102" y="59" width="125" height="29"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="125" id="RAI-zY-t1M"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Espectadores" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tc4-2y-9S0">
-                        <rect key="frame" x="102" y="59" width="114" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FhQ-mt-l1n">
+                        <rect key="frame" x="235" y="59" width="69" height="29"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" red="0.38154667619999999" green="0.2490065098" blue="0.63251572850000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <constraints>
+                    <constraint firstItem="FhQ-mt-l1n" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="3Ln-1B-8sw"/>
+                    <constraint firstItem="sFZ-Sc-FYg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="9C4-dl-mIG"/>
+                    <constraint firstItem="tc4-2y-9S0" firstAttribute="bottom" secondItem="FhQ-mt-l1n" secondAttribute="bottom" id="Iej-zt-VEu"/>
+                    <constraint firstItem="dPU-y0-RzV" firstAttribute="leading" secondItem="sFZ-Sc-FYg" secondAttribute="trailing" constant="8" id="OY5-x7-B8z"/>
+                    <constraint firstItem="tc4-2y-9S0" firstAttribute="top" secondItem="FhQ-mt-l1n" secondAttribute="top" id="PMQ-DW-ALN"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="tc4-2y-9S0" secondAttribute="bottom" constant="1" id="XRW-Hq-SSE"/>
+                    <constraint firstItem="sFZ-Sc-FYg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="fwK-4o-Py2"/>
+                    <constraint firstItem="tc4-2y-9S0" firstAttribute="leading" secondItem="dPU-y0-RzV" secondAttribute="leading" id="iZU-f4-vgr"/>
+                    <constraint firstItem="sFZ-Sc-FYg" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="mUX-OI-A2g"/>
+                    <constraint firstItem="FhQ-mt-l1n" firstAttribute="leading" secondItem="tc4-2y-9S0" secondAttribute="trailing" constant="8" symbolic="YES" id="n8e-7K-INw"/>
+                    <constraint firstItem="dPU-y0-RzV" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="nGh-AM-FiE"/>
+                    <constraint firstItem="tc4-2y-9S0" firstAttribute="top" secondItem="dPU-y0-RzV" secondAttribute="bottom" constant="8" symbolic="YES" id="nRR-ED-wc3"/>
+                    <constraint firstItem="dPU-y0-RzV" firstAttribute="leading" secondItem="sFZ-Sc-FYg" secondAttribute="trailing" constant="8" id="sPL-Aw-InY"/>
+                    <constraint firstItem="dPU-y0-RzV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="z4M-b6-U2V"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
